Kubernetes/Jenkins/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins-sa
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        ports:
        - containerPort: 8080
        - containerPort: 50000
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
        - name: plugin-volume
          mountPath: /usr/share/jenkins/ref/plugins
        - name: ssh-keys
          mountPath: /var/jenkins_home/.ssh
          readOnly: true
        - name: casc-config
          mountPath: /var/jenkins_home/casc_configs
      volumes:
      - name: plugin-volume
        persistentVolumeClaim:
          claimName: jenkins-plugins-pvc
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-home-pvc
      - name: ssh-keys
        secret:
          secretName: jenkins-ssh-keys
      - name: casc-config
        configMap:
          name: jenkins-config
      - name: job-config
        configMap:
          name: jenkins-jobs
